objects/Registration__c.object
<CustomObject>
    <description>Contact's registration history from EventXL</description>
    <fields>
        <fullName>Attendee_Status__c</fullName>
        <label>Attendee Status</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Badge_Type__c</fullName>
        <label>Badge Type</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Cancelled_Date__c</fullName>
        <label>Cancelled Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ContactRegistrationId__c</fullName>
        <label>ContactRegistrationId</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Registrations</relationshipLabel>
        <relationshipName>Registrations</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Event__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Event</label>
        <referenceTo>Event__c</referenceTo>
        <relationshipLabel>Registrations</relationshipLabel>
        <relationshipName>Registrations</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ExternalID__c</fullName>
        <externalId>true</externalId>
        <label>External ID</label>
        <length>50</length>
        <required>true</required>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Paid_Amount__c</fullName>
        <label>Paid Amount</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Promo_Code__c</fullName>
        <label>Promo Code</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Qualified_Date__c</fullName>
        <label>Qualified Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Reg_Source__c</fullName>
        <label>Reg Source</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Reg_Status__c</fullName>
        <label>Reg Status</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Reg_Type__c</fullName>
        <label>Reg Type</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Registered_Date__c</fullName>
        <label>Registered Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>RegistrantId__c</fullName>
        <label>RegistrantId</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Verified_Date__c</fullName>
        <label>Verified Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>sysSiloId__c</fullName>
        <description>Experient Silo ID</description>
        <label>sysSiloId</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Registration</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Event__c</columns>
        <columns>Contact__c</columns>
        <columns>Reg_Status__c</columns>
        <columns>Registered_Date__c</columns>
        <columns>Promo_Code__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Registered_Date__c</field>
            <operation>equals</operation>
            <value>LAST_N_MONTHS:12</value>
        </filters>
        <label>All Registrations in the Last Year</label>
    </listViews>
    <nameField>
        <label>Event Registration</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Registrations</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>